[package]
authors = ["ShuYu Wang <andelf@gmail.com>"]
description = "SDL2_ttf bindings for Rust"
keywords = ["SDL", "SDL2", "windowing", "graphics", "font"]
license = "MIT"
name = "sdl2_ttf"
readme = "README.md"
repository = "https://github.com/andelf/rust-sdl2_ttf"
version = "0.15.0"

[dependencies]
bitflags = "0.4"
sdl2 = "0.15.0"
sdl2-sys = "0.8.0"
